--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -429,9 +429,9 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar calculators</h2>
       <div class="similar-calculators">
-        <a href="/agriculture/seed-rate-calculator">Seed Rate Calculator</a>
-        <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/everyday-life">Fat Intake Calculator</a>
+        <a href="/agriculture/seed-rate-calculator">Seed rate calculator</a>
+        <a href="/health/gfr-calculator">GFR calculator</a>
+        <a href="/everyday-life">Fat intake calculator</a>
       </div>
     </div>
     
