--- a/everyday-life/age-calculator.html
+++ b/everyday-life/age-calculator.html
@@ -311,7 +311,7 @@ Everyday Life
   </div>
   
   <div class="input-group">
-    <div class="output-group"></div>
+    
   </div>
   
 
@@ -489,7 +489,7 @@ Everyday Life
   const dayInput = document.getElementById("day");
   const monthInput = document.getElementById("month");
   const yearInput = document.getElementById("year");
-  const resultContainer = document.getElementById("ageResult");
+  const resultContainer = document.querySelector(".output-group");
   const clearBtn = document.querySelector(".clear-inputs-btn");
   
   function formatNumber(num) {
