--- a/everyday-life/age-calculator.html
+++ b/everyday-life/age-calculator.html
@@ -310,7 +310,7 @@ Everyday Life
  </div>
   </div>
   
-  <div class="input-group">
+  <div class="output-group">
     
   </div>
   
@@ -582,7 +582,6 @@ Everyday Life
   });
 });
 </script>
-
 <script src="/assets/js/favourites.js" defer crossorigin="anonymous"></script>
 <script src="/assets/js/many-func.js" defer crossorigin="anonymous"></script>
 
