--- a/food/coffee-calculator.html
+++ b/food/coffee-calculator.html
@@ -560,7 +560,7 @@ Clear all changes
       <h2>Similar calculators</h2>
       <div class="similar-calculators">
         <a href="/food/grams-to-cups-converter">Grams To Cup Calculator</a>
-        <a href="/everyday-life">Fat Intake Calculator</a>
+        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
         <a href="/health/gfr-calculator">GFR Calculator</a>
       </div>
     </div>
