--- a/health.html
+++ b/health.html
@@ -215,7 +215,7 @@ Whether you have ever wondered roughly how much of your body blood is, or how to
  
 <h2>Dietary calculators 🍔</h2>
  <ul>
-   <li><a href="/everyday-life">Fat Intake Calculator</a></li>
+   <li><a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a></li>
  </ul>
 
 <h2>Urology & nephrology calculators 👨‍⚕️</h2>
