--- a/health/conception-calculator.html
+++ b/health/conception-calculator.html
@@ -348,7 +348,7 @@ Kenia I. Edwards; Petr Itzhak. Estimated Date of Delivery; StatPearls [Internet]
       <div class="similar-calculators">
         <a href="/health/gfr-calculator">GFR Calculator</a>
         <a href="/food/coffee-calculator">Coffee Calculator</a>
-        <a href="/everyday-life">Fat Intake Calculator</a>
+        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
       </div>
     </div>
 <article class="description-txt">
