--- a/health/gfr-calculator.html
+++ b/health/gfr-calculator.html
@@ -371,7 +371,7 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar calculators</h2>
       <div class="similar-calculators">
-        <a href="/everyday-life">Fat Intake Calculator</a>
+        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
         <a href="/biology/ligation-calculator">Ligation Calculator</a>
         <a href="/everyday-life/age-calculator">Age Calculator</a>
       </div>
