--- a/sports/on-base-percentage-calculator.html
+++ b/sports/on-base-percentage-calculator.html
@@ -475,7 +475,7 @@ Clear all changes
       <div class="similar-calculators">
         <a href="/other/edpi-calculator">EDPI Calculator</a>
         <a href="/health/gfr-calculator">GFR Calculator</a>
-        <a href="/everyday-life">Fat Intake Calculator</a>
+        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
       </div>
     </div>
 <article class="description-txt">
