--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -463,9 +463,9 @@ Clear all changes
     <div class="similar-calculators-wrap">
   <h2>Similar calculators</h2>
   <div class="similar-calculators">
-    <a href="/agriculture/herbicide-calculator">Herbicide calculator</a>
-    <a href="/health/gfr-calculator">GFR calculator</a>
-<a href="/everyday-life">Fat intake calculator</a>
+    <a href="/agriculture/herbicide-calculator">Herbicide</a>
+    <a href="/health/gfr-calculator">GFR</a>
+<a href="/everyday-life">Fat intake</a>
   </div>
 </div>
 <article class="description-txt">
