--- a/health/ovulation-calculator.html
+++ b/health/ovulation-calculator.html
@@ -429,7 +429,7 @@ Bull JR, Rowland SP, Scherwitzl EB, Scherwitzl R, Danielsson KG, Harper J. Real-
       <div class="similar-calculators">
         <a href="/health/gfr-calculator">GFR Calculator</a>
         <a href="/food/coffee-calculator">Coffee Calculator</a>
-        <a href="/everyday-life">Fat Intake Calculator</a>
+        <a href="/biology/llama-pregnancy-calculator">Llama pregnancy</a>
       </div>
     </div>
 <article class="description-txt">
