--- a/chemistry/atom-calculator.html
+++ b/chemistry/atom-calculator.html
@@ -470,9 +470,9 @@ Clear all changes
     <div class="similar-calculators-wrap">
       <h2>Similar calculators</h2>
       <div class="similar-calculators">
-        <a href="/biology/annealing-temperature-calculator">Annealing Temperature Calculator</a>
-        <a href="/biology/ligation-calculator">Ligation Calculator</a>
-        <a href="/agriculture/herbicide-calculator">Herbicide Calculator</a>
+        <a href="/biology/annealing-temperature-calculator">Annealing temperature</a>
+        <a href="/biology/ligation-calculator">Ligation</a>
+        <a href="/agriculture/herbicide-calculator">Herbicide</a>
       </div>
     </div>
 <article class="description-txt">
