--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -322,7 +322,8 @@ Everyday Life
 
     <span>Copyright by Calclulo Ltd.</span>
   </footer>
-
+  <script src="/assets/js/many-func.js" defer crossorigin="anonymous"></script>
+  
   <script src="/assets/js/search.js" defer crossorigin="anonymous"></script>
   
   <script src="/assets/js/service-worker.js" defer crossorigin="anonymous"></script>
