--- a/finance/margin-calculator.html
+++ b/finance/margin-calculator.html
@@ -405,7 +405,7 @@ Clear all changes
   </div>
 </section>
     <div class="similar-calculators-wrap">
-      <h2>Similar general investment calculators </h2>
+      <h2>Similar calculators </h2>
       <div class="similar-calculators">
         <a href="/finance/apy-calculator">APY calculator</a>
         <a href="/finance/cd-calculator">CD calculator</a>
