--- a/finance.html
+++ b/finance.html
@@ -217,6 +217,9 @@ Everyday Life
   <li><a href="/finance/money-factor-calculator">Money Factor Calculator</a></li>
   <li><a href="/finance/roi-calculator">ROI Calculator</a></li>
   <li><a href="/finance/Interest-rate-calculator">Interest Rate Calculator</a></li>
+</ul>
+<h2>Sales calculators 💸</h2>
+<ul>
   <li><a href="/finance/margin-calculator">Margin Calculator</a></li>
 </ul>
   <h2>Microeconomics calculators 💲</h2>
