--- a/agriculture/seed-rate-calculator.html
+++ b/agriculture/seed-rate-calculator.html
@@ -461,11 +461,9 @@ Clear all changes
 </section>
     
     <div class="similar-calculators-wrap">
-  <h2>Similar calculators</h2>
+  <h2>Similar crops calculators 🌽</h2>
   <div class="similar-calculators">
     <a href="/agriculture/herbicide-calculator">Herbicide</a>
-    <a href="/health/gfr-calculator">GFR</a>
-<a href="/everyday-life">Fat intake</a>
   </div>
 </div>
 <article class="description-txt">
