--- a/chemistry/atom-calculator.html
+++ b/chemistry/atom-calculator.html
@@ -468,11 +468,9 @@ Clear all changes
 </button>
     </div>
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar calculators 🫡</h2>
       <div class="similar-calculators">
         <a href="/biology/annealing-temperature-calculator">Annealing temperature</a>
-        <a href="/biology/ligation-calculator">Ligation</a>
-        <a href="/agriculture/herbicide-calculator">Herbicide</a>
       </div>
     </div>
 <article class="description-txt">
