--- a/construction/square-footage-calculator.html
+++ b/construction/square-footage-calculator.html
@@ -186,8 +186,8 @@ Everyday Life
       
     </label>
     <div class="input-select-wrap">
-    <input inputmode="numeric" pattern="[0-9]*" style="flex-basis: 50%;" type="text" id="width" >
-    <select style="flex-basis: 50%;" id="widthUnit">
+    <input inputmode="numeric" pattern="[0-9]*"  type="text" id="width" >
+    <select style="flex-basis: 50%;"  id="widthUnit">
       
       <option value="centimetres">centimetres</option>
       <option value="meters">meters</option>
@@ -547,7 +547,6 @@ Clear all changes
       <h2>Similar calculators</h2>
       <div class="similar-calculators">
         <a href="/conversion/hours-to-week-conversion">Hours to Week Conversion</a>
-        <a href="/ecology/bag-footprint-calculator">Bag Footprint Calculator</a>
         <a href="/conversion/minutes-to-hours-converter">Minutes to Hours Converter</a>
       </div>
     </div>
