--- a/agriculture/herbicide-calculator.html
+++ b/agriculture/herbicide-calculator.html
@@ -427,11 +427,9 @@ Clear all changes
 </section>
 
     <div class="similar-calculators-wrap">
-      <h2>Similar calculators</h2>
+      <h2>Similar crops calculators 🌽</h2>
       <div class="similar-calculators">
         <a href="/agriculture/seed-rate-calculator">Seed rate</a>
-        <a href="/health/gfr-calculator">GFR</a>
-        <a href="/everyday-life">Fat intake</a>
       </div>
     </div>
     
